--- a/DP Dashboard/src/main/resources/templates/fragments/header.html
+++ b/DP Dashboard/src/main/resources/templates/fragments/header.html
@@ -3,8 +3,8 @@
     <div th:fragment="header-css">
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Voltarent Engineering</title>
-        <meta name="description" content="">
+        <title>Decision Platform</title>
+        <meta name="description" content="Decision Platform">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- favicon
             ============================================ -->
@@ -18,8 +18,7 @@
         <!-- Bootstrap CSS
             ============================================ -->
         <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}">
-        <!-- owl.carousel CSS
-            ============================================ -->
+            
         <link rel="stylesheet" th:href="@{/css/owl.carousel.css}">
         <link rel="stylesheet" th:href="@{/css/owl.theme.css}">
         <link rel="stylesheet" th:href="@{/css/owl.transitions.css}">
@@ -69,9 +68,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    <div class="logo-area">
-                        <a th:href="@{/}"><img th:src="@{/img/logo/logo.png}" src="../../static/img/logo/logo.png" alt="" /></a>
-                    </div>
+<!--                    <div class="logo-area">-->
+<!--                        <a th:href="@{/}"><img th:src="@{/img/logo/logo.png}" src="../../static/img/logo/logo.png" alt="" /></a>-->
+<!--                    </div>-->
                 </div>
 
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
