--- a/DP Dashboard/src/main/resources/templates/login.html
+++ b/DP Dashboard/src/main/resources/templates/login.html
@@ -14,6 +14,11 @@
 <div class="login-content">
 <!-- Login -->
 <div class="nk-block toggled" id="l-login">
+    <div class="col-md-12">
+        <div class="logo-area">
+            <a th:href="@{/}"><img th:src="@{/img/logo/logo.png}" src="../../static/img/logo/logo.png" alt="" /></a>
+        </div>
+    </div>
     <form th:action="@{/login}" method="post">
         <div class="nk-form">
             <div class="input-group">
