--- a/DP Dashboard/src/main/resources/templates/fragments/header.html
+++ b/DP Dashboard/src/main/resources/templates/fragments/header.html
@@ -3,7 +3,7 @@
     <div th:fragment="header-css">
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Decision Platform</title>
+        <title>ASAL Decision Platform</title>
         <meta name="description" content="Decision Platform">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- favicon
@@ -18,7 +18,7 @@
         <!-- Bootstrap CSS
             ============================================ -->
         <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}">
-            
+
         <link rel="stylesheet" th:href="@{/css/owl.carousel.css}">
         <link rel="stylesheet" th:href="@{/css/owl.theme.css}">
         <link rel="stylesheet" th:href="@{/css/owl.transitions.css}">
