--- a/DP Dashboard/src/main/resources/templates/fragments/footer.html
+++ b/DP Dashboard/src/main/resources/templates/fragments/footer.html
@@ -15,8 +15,7 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             <div class="footer-copy-right">
-                                <p>Copyright © Thivy
-                                    . All rights reserved. <a href="">Thrivy Technologies</a>.</p>
+                                <p><a href="https://github.com/vunyx/Blue-Decision-PlatForm">ASAL Decision Platform</a>.</p>
                                 <!--<span sec:authorize="isAuthenticated()">-->
                                     <!--| Logged user: <span sec:authentication="name"></span> |-->
                                     <!--Roles: <span sec:authentication="principal.authorities"></span> |-->
