--- a/DP Dashboard/src/main/resources/templates/login.html
+++ b/DP Dashboard/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 >
 <head>
 
-    <title>Login </title>
+    <title>ASAL Decision Platform </title>
 
     <div th:replace="fragments/header :: header-css"/>
 </head>
