--- a/DP Dashboard/src/main/resources/templates/fragments/header.html
+++ b/DP Dashboard/src/main/resources/templates/fragments/header.html
@@ -68,9 +68,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-<!--                    <div class="logo-area">-->
-<!--                        <a th:href="@{/}"><img th:src="@{/img/logo/logo.png}" src="../../static/img/logo/logo.png" alt="" /></a>-->
-<!--                    </div>-->
+                    <div class="logo-area">
+                        <a th:href="@{/}"><img th:src="@{/img/logo/logo.png}" src="../../static/img/logo/logo.png" alt="ASAL DP" height="45" width="50" /></a>
+                    </div>
                 </div>
 
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
