--- a/DP Dashboard/src/main/resources/templates/fragments/header-list.html
+++ b/DP Dashboard/src/main/resources/templates/fragments/header-list.html
@@ -17,13 +17,11 @@
                                         <li><a data-toggle="collapse" data-target="#Charts" href="#">Home</a>
                                             <ul class="collapse dropdown-header-top">
                                                 <li><a th:href="@{/}">Dashboard</a></li>
-                                                <li><a th:href="@{/mydevices}">My Devices</a></li>
-                                                <li><a th:href="@{/events}">Events</a></li>
+                                                <li><a th:href="@{/analytics}">Analytics</a></li>
                                             </ul>
                                         </li>
                                         <li><a data-toggle="collapse" data-target="#settings" href="#">Settings</a>
                                             <ul id="settings" class="collapse dropdown-header-top">
-                                                <li><a th:href="@{/thresholds}">Thresholds</a></li>
                                                 <li><a th:href="@{/profile}">Profile</a></li>
                                                 <!--<li><a href="${pageContext.servletContext.contextPath}/events">Events</a></li>-->
                                             </ul>
@@ -51,13 +49,11 @@
                                 <div id="Home" class="tab-pane in active notika-tab-menu-bg animated flipInX">
                                     <ul class="notika-main-menu-dropdown">
                                         <li><a th:href="@{/}">Dashboard</a></li>
-                                        <li><a th:href="@{/mydevices}">My Devices</a></li>
-                                        <li><a th:href="@{/events}">Events</a></li>
+                                        <li><a th:href="@{/analytics}">Analytics</a></li>
                                     </ul>
                                 </div>
                                 <div id="mailbox" class="tab-pane notika-tab-menu-bg animated flipInX">
                                     <ul class="notika-main-menu-dropdown">
-                                        <li><a th:href="@{/thresholds}">Thresholds</a></li>
                                         <li><a th:href="@{/profile}">Profile</a></li>
                                         <!--<li><a href="compose-email.html">Compose Email</a>-->
                                         <!--</li>-->
