Admin Dasboard implemented

--- a/DP Dashboard/src/main/resources/templates/dashboard.html
+++ b/DP Dashboard/src/main/resources/templates/dashboard.html
@@ -18,37 +18,33 @@
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="wb-traffic-inner notika-shadow sm-res-mg-t-30 tb-res-mg-t-30">
                     <div class="website-traffic-ctn">
-                        <h2><span class="counter">50,000</span></h2>
-                        <p>Total Website Traffics</p>
+                        <h2 id="hy" style="color:#0388fc"><span class="counter">0</span></h2>
+                        <p>High Yield Water Points</p>
                     </div>
-                    <div class="sparkline-bar-stats1">9,4,8,6,5,6,4,8,3,5,9,5</div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="wb-traffic-inner notika-shadow sm-res-mg-t-30 tb-res-mg-t-30">
                     <div class="website-traffic-ctn">
-                        <h2><span class="counter">90,000</span>k</h2>
-                        <p>Website Impressions</p>
+                        <h2 id="my" style="color:#6bfc03"><span class="counter">0</span></h2>
+                        <p>Medium Yield Water Points</p>
                     </div>
-                    <div class="sparkline-bar-stats2">1,4,8,3,5,6,4,8,3,3,9,5</div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="wb-traffic-inner notika-shadow sm-res-mg-t-30 tb-res-mg-t-30 dk-res-mg-t-30">
                     <div class="website-traffic-ctn">
-                        <h2>$<span class="counter">40,000</span></h2>
-                        <p>Total Online Sales</p>
+                        <h2 id="ly" style="color:#fcdb03"><span class="counter">0</span></h2>
+                        <p>Low Yield Water Points</p>
                     </div>
-                    <div class="sparkline-bar-stats3">4,2,8,2,5,6,3,8,3,5,9,5</div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="wb-traffic-inner notika-shadow sm-res-mg-t-30 tb-res-mg-t-30 dk-res-mg-t-30">
                     <div class="website-traffic-ctn">
-                        <h2><span class="counter">1,000</span></h2>
-                        <p>Total Support Tickets</p>
+                        <h2 id="zy" style="color:#fc5603"><span class="counter">0</span></h2>
+                        <p>Zero Yield Water Points</p>
                     </div>
-                    <div class="sparkline-bar-stats4">2,4,8,4,5,7,4,7,3,5,7,5</div>
                 </div>
             </div>
         </div>
@@ -68,41 +64,49 @@
                             <p>Location Map of all the water points in the country</p>
                         </div>
                     </div>
-                    <div id="googleMap" class="flot-chart-sts flot-chart" style="width:100%;height:300px;"></div>
+                    <div id="googleMap" class="flot-chart-sts flot-chart" style="width:100%;height:360px;"></div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-5 col-xs-12">
                 <div class="statistic-right-area notika-shadow mg-tb-30 sm-res-mg-t-0">
                     <div class="past-day-statis">
-                        <h2>For The Past 30 Days</h2>
-                        <p>Fusce eget dolor id justo luctus the commodo vel pharetra nisi. Donec velit of libero.</p>
+                        <h2>Site Status</h2>
+                        <p>Overview of Status of all Sites</p>
                     </div>
-                    <div class="dash-widget-visits"></div>
                     <div class="past-statistic-an">
                         <div class="past-statistic-ctn">
-                            <h3><span class="counter">3,20,000</span></h3>
-                            <p>Page Views</p>
-                        </div>
-                        <div class="past-statistic-graph">
-                            <div class="stats-bar"></div>
+                            <h3 id="nu"><span class="counter">0</span></h3>
+                            <p>Normal Use</p>
                         </div>
                     </div>
                     <div class="past-statistic-an">
                         <div class="past-statistic-ctn">
-                            <h3><span class="counter">1,03,000</span></h3>
-                            <p>Total Clicks</p>
-                        </div>
-                        <div class="past-statistic-graph">
-                            <div class="stats-line"></div>
+                            <h3 id="lu"><span class="counter">0</span></h3>
+                            <p>Low Use</p>
                         </div>
                     </div>
                     <div class="past-statistic-an">
                         <div class="past-statistic-ctn">
-                            <h3><span class="counter">24,00,000</span></h3>
-                            <p>Site Visitors</p>
+                            <h3 id="sd"><span class="counter">0</span></h3>
+                            <p>Seasonal Disuse</p>
                         </div>
-                        <div class="past-statistic-graph">
-                            <div class="stats-bar-2"></div>
+                    </div>
+                    <div class="past-statistic-an">
+                        <div class="past-statistic-ctn">
+                            <h3 id="xu"><span class="counter">0</span></h3>
+                            <p>No Use</p>
+                        </div>
+                    </div>
+                    <div class="past-statistic-an">
+                        <div class="past-statistic-ctn">
+                            <h3 id="r"><span class="counter">0</span></h3>
+                            <p>Repair</p>
+                        </div>
+                    </div>
+                    <div class="past-statistic-an">
+                        <div class="past-statistic-ctn">
+                            <h3 id="o"><span class="counter">0</span></h3>
+                            <p>Offline</p>
                         </div>
                     </div>
                 </div>
