--- a/DP Dashboard/src/main/resources/templates/analytics.html
+++ b/DP Dashboard/src/main/resources/templates/analytics.html
@@ -11,6 +11,42 @@
 
 <div th:replace="fragments/header-list :: header-list"/>
 
+<div class="notika-status-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 center-block">
+                <div class="wb-traffic-inner notika-shadow sm-res-mg-t-30 tb-res-mg-t-30 center-block">
+                    <div class="website-traffic-ctn center-block">
+                        <canvas id="active_hours"></canvas>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                <div class="wb-traffic-inner notika-shadow sm-res-mg-t-30 tb-res-mg-t-30">
+                    <div class="website-traffic-ctn">
+                        <canvas id="sensor_uptimes"></canvas>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                <div class="wb-traffic-inner notika-shadow sm-res-mg-t-30 tb-res-mg-t-30 dk-res-mg-t-30">
+                    <div class="website-traffic-ctn">
+                        <canvas id="site_uptimes"></canvas>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                <div class="wb-traffic-inner notika-shadow sm-res-mg-t-30 tb-res-mg-t-30 dk-res-mg-t-30">
+                    <div class="website-traffic-ctn">
+                        <canvas id="yield_daily"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Status area-->
+
 <div class="datepicker-area">
     <div class="container">
         <div class="row">
@@ -42,7 +78,7 @@
                                     <div class="form-group nk-datapk-ctm form-elet-mg">
                                         <p id="households"></p>
                                         <p id="activeHours"></p>
-
+                                        <p id="sensors"></p>
                                     </div>
                                 </div>
                             </div>
@@ -51,6 +87,7 @@
                                     <div class="form-group nk-datapk-ctm form-elet-mg">
                                         <p id="yieldDaily"></p>
                                         <p id="localDate"></p>
+                                        <p id="yield_rate"></p>
                                     </div>
                                 </div>
                             </div>
@@ -85,56 +122,56 @@
     </div>
 </div>
 
-<div class="datepicker-area">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <form id="sss">
-                    <div class="datepicker-int mg-t-30">
-                        <div class="cmp-tb-hd">
-                            <h2>County Daily Yield</h2>
-                            <p>View Historical County Daily Yield</p>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                                <div class="form-group nk-datapk-ctm form-elet-mg">
+<!--<div class="datepicker-area">-->
+<!--    <div class="container">-->
+<!--        <div class="row">-->
+<!--            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
+<!--                <form id="sss">-->
+<!--                    <div class="datepicker-int mg-t-30">-->
+<!--                        <div class="cmp-tb-hd">-->
+<!--                            <h2>County Daily Yield</h2>-->
+<!--                            <p>View Historical County Daily Yield</p>-->
+<!--                        </div>-->
+<!--                        <div class="row">-->
+<!--                            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">-->
+<!--                                <div class="form-group nk-datapk-ctm form-elet-mg">-->
 
-                                    <div class="bootstrap-select fm-cmp-mg">
-                                        <select id="county" onchange="loadCountyData();" class="devicepicker">
-                                            <option value="marsabit">Marsabit</option>
-                                            <option value="turkana">Turkana</option>
-                                            <option value="isiolo">Isiolo</option>
-                                            <option value="wajir">Wajir</option>
-                                            <option value="garissa">Garissa</option>
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
+<!--                                    <div class="bootstrap-select fm-cmp-mg">-->
+<!--                                        <select id="county" onchange="loadCountyData();" class="devicepicker">-->
+<!--                                            <option value="marsabit">Marsabit</option>-->
+<!--                                            <option value="turkana">Turkana</option>-->
+<!--                                            <option value="isiolo">Isiolo</option>-->
+<!--                                            <option value="wajir">Wajir</option>-->
+<!--                                            <option value="garissa">Garissa</option>-->
+<!--                                        </select>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </form>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
-<div class="sale-statistic-area">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <div class="sale-statistic-inner notika-shadow mg-tb-30">
-                    <div class="curved-inner-pro">
-                        <div class="curved-ctn">
-                            <h2>County Data</h2>
-                            <p>Daily data for County </p>
-                        </div>
-                    </div>
-                    <div id="rr" class="flot-chart-sts flot-chart" style="width:100%;height:360px;"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<!--<div class="sale-statistic-area">-->
+<!--    <div class="container">-->
+<!--        <div class="row">-->
+<!--            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
+<!--                <div class="sale-statistic-inner notika-shadow mg-tb-30">-->
+<!--                    <div class="curved-inner-pro">-->
+<!--                        <div class="curved-ctn">-->
+<!--                            <h2>County Data</h2>-->
+<!--                            <p>Daily data for County </p>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div id="rr" class="flot-chart-sts flot-chart" style="width:100%;height:360px;"></div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
 <div th:replace="fragments/footer :: footer"/>
 
