--- a/DP Dashboard/src/main/resources/templates/analytics.html
+++ b/DP Dashboard/src/main/resources/templates/analytics.html
@@ -15,31 +15,35 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 center-block">
+                <div class="curved-ctn text-center">
+                    <h6>Active Hours Summary</h6>
+                </div>
                 <div class="wb-traffic-inner notika-shadow sm-res-mg-t-30 tb-res-mg-t-30 center-block">
-                    <div class="website-traffic-ctn center-block">
                         <canvas id="active_hours"></canvas>
-                    </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                <div class="curved-ctn text-center">
+                    <h6>Sensors Uptime Summary</h6>
+                </div>
                 <div class="wb-traffic-inner notika-shadow sm-res-mg-t-30 tb-res-mg-t-30">
-                    <div class="website-traffic-ctn">
                         <canvas id="sensor_uptimes"></canvas>
-                    </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                <div class="curved-ctn text-center">
+                    <h6>Site Uptime Summary</h6>
+                </div>
                 <div class="wb-traffic-inner notika-shadow sm-res-mg-t-30 tb-res-mg-t-30 dk-res-mg-t-30">
-                    <div class="website-traffic-ctn">
                         <canvas id="site_uptimes"></canvas>
-                    </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                <div class="curved-ctn text-center">
+                    <h6>Daily Yield Summary</h6>
+                </div>
                 <div class="wb-traffic-inner notika-shadow sm-res-mg-t-30 tb-res-mg-t-30 dk-res-mg-t-30">
-                    <div class="website-traffic-ctn">
                         <canvas id="yield_daily"></canvas>
-                    </div>
                 </div>
             </div>
         </div>
@@ -66,10 +70,10 @@
                                             <!--<option value="">Select Device Type</option>-->
                                             <option th:each="coun : ${county}"
                                                     th:value="${coun.mwater_id}"
-                                                    th:text="${coun.county}"></option>
+                                                    th:text="${coun.county}">
+                                            </option>
                                         </select>
                                     </div>
-
                                     <p id="status"></p>
                                 </div>
                             </div>
@@ -121,57 +125,6 @@
         </div>
     </div>
 </div>
-
-<!--<div class="datepicker-area">-->
-<!--    <div class="container">-->
-<!--        <div class="row">-->
-<!--            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
-<!--                <form id="sss">-->
-<!--                    <div class="datepicker-int mg-t-30">-->
-<!--                        <div class="cmp-tb-hd">-->
-<!--                            <h2>County Daily Yield</h2>-->
-<!--                            <p>View Historical County Daily Yield</p>-->
-<!--                        </div>-->
-<!--                        <div class="row">-->
-<!--                            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">-->
-<!--                                <div class="form-group nk-datapk-ctm form-elet-mg">-->
-
-<!--                                    <div class="bootstrap-select fm-cmp-mg">-->
-<!--                                        <select id="county" onchange="loadCountyData();" class="devicepicker">-->
-<!--                                            <option value="marsabit">Marsabit</option>-->
-<!--                                            <option value="turkana">Turkana</option>-->
-<!--                                            <option value="isiolo">Isiolo</option>-->
-<!--                                            <option value="wajir">Wajir</option>-->
-<!--                                            <option value="garissa">Garissa</option>-->
-<!--                                        </select>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </form>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-
-<!--<div class="sale-statistic-area">-->
-<!--    <div class="container">-->
-<!--        <div class="row">-->
-<!--            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
-<!--                <div class="sale-statistic-inner notika-shadow mg-tb-30">-->
-<!--                    <div class="curved-inner-pro">-->
-<!--                        <div class="curved-ctn">-->
-<!--                            <h2>County Data</h2>-->
-<!--                            <p>Daily data for County </p>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div id="rr" class="flot-chart-sts flot-chart" style="width:100%;height:360px;"></div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
 
 <div th:replace="fragments/footer :: footer"/>
 
