--- a/DP Dashboard/src/main/resources/templates/fragments/footer.html
+++ b/DP Dashboard/src/main/resources/templates/fragments/footer.html
@@ -93,6 +93,9 @@
 
             <script th:src="@{js/datapicker/bootstrap-datepicker.js}"></script>
             <script th:src="@{js/datapicker/datepicker-active.js}"></script>
+
+            <script th:src="@{js/notification/bootstrap-growl.min.js}"></script>
+            <script th:src="@{js/notification/notification-active.js}"></script>
             <!-- main JS
                 ============================================ -->
             <script th:src="@{js/main.js}"></script>
