--- a/DP Dashboard/src/main/resources/templates/analytics.html
+++ b/DP Dashboard/src/main/resources/templates/analytics.html
@@ -128,6 +128,7 @@
 
 <div th:replace="fragments/footer :: footer"/>
 
+<script th:src="@{js/controllers/common.js}"></script>
 <script th:src="@{js/charts/Chart.js}"></script>
 <script th:src="@{js/controllers/anlyCtrl.js}"></script>
 
