--- a/DP Dashboard/src/main/resources/templates/clientAnalytics.html
+++ b/DP Dashboard/src/main/resources/templates/clientAnalytics.html
@@ -83,7 +83,7 @@
 </div>
 
 <div th:replace="fragments/footer :: footer"/>
-
+<script th:src="@{js/controllers/common.js}"></script>
 <script th:src="@{js/charts/Chart.js}"></script>
 <script th:src="@{js/controllers/cAnlyCtrl.js}"></script>
 
