--- a/DP Dashboard/src/main/resources/templates/clientDash.html
+++ b/DP Dashboard/src/main/resources/templates/clientDash.html
@@ -19,8 +19,8 @@
                 <div class="sale-statistic-inner notika-shadow mg-tb-30">
                     <div class="curved-inner-pro">
                         <div class="curved-ctn">
-                            <h2>Water Points</h2>
-                            <p>Location Map of all the water points in the county</p>
+                            <h2>Wajir County Water Points</h2>
+                            <p>Location Map of all the water points in the couny</p>
                         </div>
                     </div>
                     <div id="googleMap" class="flot-chart-sts flot-chart" style="width:100%;height:360px;"></div>
@@ -34,37 +34,37 @@
                     </div>
                     <div class="past-statistic-an">
                         <div class="past-statistic-ctn">
-                            <h3 id="nu"><span class="counter">0</span></h3>
+                            <h3 id="nu" style="color:#0388fc"><span class="counter">0</span></h3>
                             <p>Normal Use</p>
                         </div>
                     </div>
                     <div class="past-statistic-an">
                         <div class="past-statistic-ctn">
-                            <h3 id="lu"><span class="counter">0</span></h3>
+                            <h3 id="lu" style="color:#42f5d1"><span class="counter">0</span></h3>
                             <p>Low Use</p>
                         </div>
                     </div>
                     <div class="past-statistic-an">
                         <div class="past-statistic-ctn">
-                            <h3 id="sd"><span class="counter">0</span></h3>
+                            <h3 id="sd" style="color:#5af542"><span class="counter">0</span></h3>
                             <p>Seasonal Disuse</p>
                         </div>
                     </div>
                     <div class="past-statistic-an">
                         <div class="past-statistic-ctn">
-                            <h3 id="xu"><span class="counter">0</span></h3>
+                            <h3 id="xu" style="color:#f54242"><span class="counter">0</span></h3>
                             <p>No Use</p>
                         </div>
                     </div>
                     <div class="past-statistic-an">
                         <div class="past-statistic-ctn">
-                            <h3 id="r"><span class="counter">0</span></h3>
+                            <h3 id="r" style="color:#e6f542"><span class="counter">0</span></h3>
                             <p>Repair</p>
                         </div>
                     </div>
                     <div class="past-statistic-an">
                         <div class="past-statistic-ctn">
-                            <h3 id="o"><span class="counter">0</span></h3>
+                            <h3 id="o" style="color:#f59e42"><span class="counter">0</span></h3>
                             <p>Offline</p>
                         </div>
                     </div>
@@ -76,7 +76,7 @@
 <!-- End Sale Statistic area-->
 
 <div th:replace="fragments/footer :: footer"/>
-
+<script th:src="@{js/controllers/common.js}"></script>
 <script th:src="@{js/controllers/cDashCtrl.js}"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIXEnt978JczAkDOVWLpYdjAA-1nkQhWk&callback=initMap" async defer></script>
 
